--- a/src/components/Cursors/c-cursor.scss
+++ b/src/components/Cursors/c-cursor.scss
@@ -1,17 +1,20 @@
 .c-cursor {
+	height: 10rem;
+	width: 10rem;
+	background-color: $yellow;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 99999;
+	border-radius: 50%;
+	transform: scale(0) translate(-50%, -50%);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-transform: uppercase;
+	font-size: 2rem;
 
-  transition: 400ms ease;
-  
-
-	.is-drag {
-		height: 10rem;
-		width: 10rem;
-		background-color: $dark;
-		position: absolute;
-		top: 0;
-		left: 0;
-		z-index: 99999;
-		border-radius: 50%;
-		// transform: translate(-50%, -50%);
+	&.is-drag {
+		cursor: none;
 	}
 }
