--- a/src/components/Pages/Home/o-home_how.scss
+++ b/src/components/Pages/Home/o-home_how.scss
@@ -5,11 +5,33 @@
 .o-page_home {
 	.o-how {
 		position: relative;
+		overflow: hidden;
+
+		
 
 		.c-drawing {
 			position: absolute;
+			z-index: 99999;
 
-			width: 200vw;
+			
+			.c-drawing_assortment {
+				width: 100vw;
+				height: 100%;
+				display: none;
+			}
+			
+
+			.proxy {
+				fill: none;
+				stroke: $light;
+				stroke-width: 3vw;
+			} 
+
+			
+
+			path {
+				stroke-linecap: round;
+			}
 
 			&_blue {
 				top: -5vw;
@@ -18,9 +40,9 @@
 			}
 
 			&_green {
-				right: -10vw;
+				right: -15vw;
 				top: -5vw;
-				width: 45vw;
+				width: 30vw;
 			}
 
 			&_red {
@@ -69,9 +91,10 @@
 }
 
 .steps-container .c-note {
-	display: none;
+	
 	position: absolute;
-	height: 8vw;
+	height: 5vw;
+	transform: scale(0.01);
 
 	&_1 {
 		top: 0;
@@ -81,11 +104,19 @@
 	&_2 {
 		top: 20vw;
 		right: 10vw;
+		transform: rotate(90deg);
 	}
 
 	&_3 {
-		left: 0;
-		bottom: 25vw;
+		left: 10vw;
+		bottom: 30vw;
+	}
+
+
+	&_4 {
+		right: 10vw;
+		bottom: 5vw;
+		transform: rotate(-80deg);
 	}
 
 	&_clef,
@@ -221,9 +252,9 @@
 				0.94
 			); /* easeOutQuad */
 
-			// &.is-inview {
-			// 	width: 100%;
-			// }
+			&.is-inview {
+				width: 100%;
+			}
 		}
 	}
 
