--- a/src/styles/scss/objects/o-h2.scss
+++ b/src/styles/scss/objects/o-h2.scss
@@ -10,13 +10,17 @@
 	font-size: 6vw;
 	margin: 0;
 	line-height: 6vw;
+
+	@include media("<=tablet") {
+		font-size: 11vw;
+		line-height: 11vw;
+	}
 }
 
 .c-stories p {
 	font-size: 2.3vw;
 	line-height: 2.7vw;
 }
-
 
 // @media (min-width:700px) and (max-width:1599px) {
 //   .o-h2,
