--- a/src/components/Transition/o-intro.scss
+++ b/src/components/Transition/o-intro.scss
@@ -5,14 +5,18 @@
 	width: 100vw;
 	height: 100vh;
 	z-index: 99999;
+	background-color: blue;
+	display: none;
 
 	&_text {
 		z-index: 1;
-    opacity: 0;
+		opacity: 0;
 		overflow: hidden;
 	}
 
 	&_bg {
 		z-index: 0;
+		
+		
 	}
 }
