--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -36,6 +36,7 @@
 @import "../../components/Vector/c-frame.scss";
 @import "../../components/Slider/o-slider.scss";
 @import "../../components/Cursors/c-cursor.scss";
+@import "../../components/Canvas/o-scene.scss";
 
 
 
