--- a/src/components/Cursors/c-cursor.scss
+++ b/src/components/Cursors/c-cursor.scss
@@ -1,25 +1,46 @@
-.c-cursor {
-	height: 10rem;
-	width: 10rem;
-	background-color: $yellow;
+.o-cursor-wrap {
+	height: 100vh;
+	width: 100vw;
 	position: fixed;
 	top: 0;
 	left: 0;
+	
+}
+
+.c-cursor {
+	
+	position: fixed;
+	height: 15rem;
+	width: 15rem;
 	z-index: 99999;
 	border-radius: 50%;
-	transform: scale(0) translate(-50%, -50%);
-	opacity: 0;
+	transform: scale(0.1) translate(-50%, -50%);
+	pointer-events: none;
+	
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	text-transform: uppercase;
 	font-size: 2rem;
 
+	&_svg {
+		width: 100;
+		height: 100%;
+
+		stroke: $dark;
+		stroke-width: 1px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		transform-origin: center;
+		overflow: visible;
+
+	}
 	
 
 	&.is-drag {
-		
 		pointer-events: none;
+		
+		mix-blend-mode: normal;
 	}
 }
-
