--- a/src/components/Header/c-header.scss
+++ b/src/components/Header/c-header.scss
@@ -12,8 +12,6 @@
 		height: 3rem;
 	}
 
-	
-
 	.c-arrow-button {
 		width: 100%;
 		height: 100%;
@@ -32,7 +30,10 @@
 	}
 
 	.c-list li {
-	
+		.c-highlight {
+			stroke: $dark;
+			stroke-width: 1px;
+		}
 
 		&:hover::after {
 			background-color: $dark;
