--- a/src/components/Lists/c-list.scss
+++ b/src/components/Lists/c-list.scss
@@ -1,12 +1,39 @@
 .c-list {
 	display: flex;
 
+	.c-highlight {
+		z-index: -1;
+		width: 100%;
+		height: 4rem;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+
+		svg {
+			height: 100%;
+			width: 100%;
+
+			path {
+				stroke-linecap: round;
+				height: 100%;
+			}
+		}
+	}
+
 	li:not(:last-child) {
 		margin-right: 4rem;
 	}
 
 	li {
 		position: relative;
+		padding: 1rem;
+		
+
+		.c-link {
+			z-index: 1;
+			position: static;
+		}
 
 		&:hover .c-link {
 			transform: translateY(-20%);
