--- a/src/styles/scss/_animations.scss
+++ b/src/styles/scss/_animations.scss
@@ -82,3 +82,14 @@
 		opacity: 0;
 	}
 }
+
+@keyframes fadeUp {
+	from {
+		transform: translateY(100%);
+		opacity: 0;
+	}
+	to {
+		transform: translateY(0);
+		opacity: 1;
+	}
+}
