--- a/src/components/Cursors/c-cursor.scss
+++ b/src/components/Cursors/c-cursor.scss
@@ -10,11 +10,13 @@
 .c-cursor {
 	
 	position: fixed;
+	left: 15rem;
+	top: 15rem;
 	height: 15rem;
 	width: 15rem;
 	z-index: 99999;
 	border-radius: 50%;
-	transform: scale(0.1) translate(-50%, -50%);
+	transform: scale(0.2) translate(-50%, -50%);
 	pointer-events: none;
 	
 	display: flex;
@@ -26,21 +28,27 @@
 	&_svg {
 		width: 100;
 		height: 100%;
-
-		stroke: $dark;
-		stroke-width: 1px;
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		transform-origin: center;
+		stroke: $dark;
+		stroke-width: 1px;
+		position: relative;
 		overflow: visible;
+		transition: fill 200ms ease;
+		stroke: none;
 
 	}
 	
 
 	&.is-drag {
 		pointer-events: none;
-		
 		mix-blend-mode: normal;
+		
+
+		svg {
+			fill: $yellow;
+			
+		}
 	}
 }
