--- a/src/components/Pages/SingleProject/o-single-project.scss
+++ b/src/components/Pages/SingleProject/o-single-project.scss
@@ -40,7 +40,7 @@
 
 					.o-hero_text {
 						position: static;
-						transform: none !important;
+						
 						margin: $space-xl 0;
 						width: 100%;
 					}
@@ -66,6 +66,13 @@
 			flex-direction: column;
 			align-items: flex-start;
 			justify-content: center;
+
+
+	
+			@include media("<=tablet") {
+				opacity: 1;
+			}
+
 		}
 
 		&_image {
