--- a/src/components/Stories/c-stories.scss
+++ b/src/components/Stories/c-stories.scss
@@ -1,3 +1,10 @@
+	
+
+	// .-frame-reveal .c-frame {
+		
+	// 	@include frameReveal(100ms, forwards);
+	// }
+
 .c-quotation {
 	width: 80vw;
 	height: 80vw;
@@ -11,38 +18,54 @@
 	}
 }
 
+
 .c-stories {
 	margin: 0 auto;
 	position: relative;
 
-	&_frame {
-		width: 100vw;
-		left: 50%;
-		top: 50%;
-		transform: translate(-50%, -50%)scale(0.9)rotate(-1deg);
 
+
+
+	&_frame {
 		
+		transform: scale(1.3)rotate(-1deg);
 		position: absolute;
 
+		.c-frame_svg_quote {
+			fill: $dark;
+			position: absolute;
+			width: 10vw;
+
+			&-top {
+				top: -3vw;
+				right: 7.2vw;	
+			}
+
+			&-bottom {
+				bottom: -2vw;
+				left: 7vw;
+				transform: rotate(180deg);
+			}
+		}
 
 		// path {
 		// 	stroke: $yellow;
 		// }
 	}
 
-	.c-frame {
+	// .c-frame {
 
-		height: 40vw;
-		top:-2.2vw;
-		width: 70vw;
-		// transform: scale(1.2);
+	// 	height: 40vw;
+	// 	top:-2.2vw;
+	// 	width: 70vw;
+	// 	// transform: scale(1.2);
 
-		// svg path {
-		// 	fill: $yellow !important;
+	// 	// svg path {
+	// 	// 	fill: $yellow !important;
 			
-		// }
+	// 	// }
 		
-	}
+	// }
 
 	&_mobile-bg {
 		position: absolute;
