--- a/src/components/Pages/Home/o-home_about.scss
+++ b/src/components/Pages/Home/o-home_about.scss
@@ -1,32 +1,66 @@
 .o-about {
-position: relative;
+	position: relative;
+	font-weight: bolder;
 
-.o-text {
-  width: 50vw;
-}
+	.face {
+		path {
+			stroke: $light !important;
+		}
+	}
 
-  .c-megaphone {
-    position: absolute;
-    right: -3vw;
-    width: 35vw;
-    transform: scaleX(-100%);
-    bottom: 0;
+	&_content {
+		display: flex;
+		flex-direction: row-reverse;
 
-  }
+		.inner {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+	}
 
-  min-height: 80vh;
+	.c-frame {
+		@include frameRevealDefaultStyles();
+	}
 
-  &_content {
+	.c-megaphone {
+		width: 50vw;
+		stroke: none;
+		transform: rotate(-20deg);
+	}
 
-    .o-about_left, .o-about_right {
-      flex: 50%;
-    }
-  }
-  &_left {
-    
+	
 
-    .o-text p:nth-of-type(1){
-      margin-bottom: $space-md;
-    }
-  }
+	// .c-megaphone, .guitar {
+		
+	// 	right: 10vw;
+	// 	position: absolute;
+	// 	left: -10vw;
+	// 	top: 0;
+	// 	width: 50vw;
+		
+
+
+	// 	path {
+	// 		fill: none;
+	// 		stroke: $light;
+	// 	}
+	// }
+
+	min-height: 80vh;
+
+	&_content {
+		.o-about_left,
+		.o-about_right {
+			flex: 50%;
+			width: 50%;
+		}
+	}
+	&_left {
+		width: 50%;
+
+		.o-text p:nth-of-type(1) {
+			margin-bottom: $space-md;
+		}
+	}
 }
