--- a/src/components/Pages/Home/o-home_how.scss
+++ b/src/components/Pages/Home/o-home_how.scss
@@ -2,6 +2,15 @@
 	width: 30vw;
 }
 
+.musical-line {
+	width: 50vw;
+	path {
+		fill: none !important;
+		stroke: $yellow;
+		
+	}
+}
+
 .o-page_home {
 	.o-how {
 		position: relative;
@@ -113,7 +122,7 @@
 			position: static;
 			margin: 0 auto;
 			text-align: center;
-			width: 35vw;
+			
 			z-index: 999;
 		}
 	}
