--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -13,6 +13,7 @@
 @import "objects/o-page.scss";
 @import "../../components/Containers/o-container.scss";
 @import "../../components/Pages/Projects/c-grid.scss";
+@import "../../components/Pages/Projects/o-project-page.scss";
 @import "../../components/Header/c-header.scss";
 @import "../../components/Link/c-link.scss";
 @import "../../components/Menu/c-menu.scss";
