Add lnink hover effect using gsap drawsvg

--- a/src/components/Pages/Home/o-home_hero.scss
+++ b/src/components/Pages/Home/o-home_hero.scss
@@ -15,10 +15,11 @@
 				position: absolute;
 				top: 50%;
 				left: 50%;
-				transform: translate(-7 0%, -50%);
+				transform: translate(-70%, -50%);
 				overflow: hidden;
 				width: 25vw;
 				height: 28vw;
+        
 
 				.revealer {
 					position: absolute;
