--- a/src/components/Lists/c-list.scss
+++ b/src/components/Lists/c-list.scss
@@ -3,26 +3,28 @@
 
 	.c-highlight {
 		z-index: -1;
-		width: 100%;
-		height: 4rem;
+		width: 80%;
+		height: 2.4rem;
 		position: absolute;
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
 
 		svg {
-			height: 100%;
+			position: absolute;
+			bottom: 0;
 			width: 100%;
 
 			path {
 				stroke-linecap: round;
 				height: 100%;
+				stroke: $dark;
 			}
 		}
 	}
 
 	li:not(:last-child) {
-		margin-right: 4rem;
+		margin-right: 2rem;
 	}
 
 	li {
