--- a/src/styles/scss/_global.scss
+++ b/src/styles/scss/_global.scss
@@ -42,6 +42,11 @@
 	src: url("../assets/fonts/GTFRiposteTRIAL-Regular.otf");
 }
 
+@font-face {
+	font-family: "Kobe Bold";
+	src: url("../assets/fonts/Kobe1.1-Bold.woff");
+}
+
 // @font-face {
 // 	font-family: "Soehne Body";
 // 	src: url("../assets//fonts/SoehneBody.woff2")
