--- a/src/components/Pages/Home/o-home_about.scss
+++ b/src/components/Pages/Home/o-home_about.scss
@@ -1,6 +1,10 @@
 .o-about {
 	position: relative;
 	font-weight: bolder;
+	min-height: 80vw;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
 	.face {
 		path {
@@ -29,17 +33,13 @@
 		transform: rotate(-20deg);
 	}
 
-	
-
 	// .c-megaphone, .guitar {
-		
+
 	// 	right: 10vw;
 	// 	position: absolute;
 	// 	left: -10vw;
 	// 	top: 0;
 	// 	width: 50vw;
-		
-
 
 	// 	path {
 	// 		fill: none;
@@ -47,7 +47,7 @@
 	// 	}
 	// }
 
-	min-height: 80vh;
+	// min-height: 80vh;
 
 	&_content {
 		.o-about_left,
@@ -61,6 +61,27 @@
 
 		.o-text p:nth-of-type(1) {
 			margin-bottom: $space-md;
+		}
+	}
+
+	&_content {
+		@include media("<=phoneL") {
+			flex-direction: column;
+			justify-content: center;
+
+			.o-about_left,
+			.o-about_right {
+				padding: 0;
+			}
+
+			.o-about_left {
+				width: 100%;
+			}
+
+			.o-about_right {
+				width: 80%;
+				margin: 0 auto;
+			}
 		}
 	}
 }
