--- a/src/styles/scss/objects/o-h2.scss
+++ b/src/styles/scss/objects/o-h2.scss
@@ -11,6 +11,12 @@
 	margin: 0;
 	line-height: 6vw;
 
+	&, & * {
+		font-family: 'Kobe Bold';
+		
+	}
+
+
 	@include media("<=tablet") {
 		font-size: 11vw;
 		line-height: 11vw;
