--- a/src/components/Vector/svg.scss
+++ b/src/components/Vector/svg.scss
@@ -3,7 +3,7 @@
 	opacity: 0.8;
 
 	position: absolute;
-  top: 50%;
+	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 
@@ -11,6 +11,25 @@
 		height: 100%;
 		path {
 			fill: $yellow;
+		}
+	}
+}
+
+.c-drawnLogo {
+	.eye,
+	.vibration {
+		fill: $yellow;
+	}
+
+	&.is-light {
+		.faceLine {
+			fill: $light;
+		}
+	}
+
+	&.is-dark {
+		.faceLine {
+			fill: $dark;
 		}
 	}
 }
