--- a/src/components/Pages/Home/o-home_about.scss
+++ b/src/components/Pages/Home/o-home_about.scss
@@ -33,22 +33,6 @@
 		transform: rotate(-20deg);
 	}
 
-	// .c-megaphone, .guitar {
-
-	// 	right: 10vw;
-	// 	position: absolute;
-	// 	left: -10vw;
-	// 	top: 0;
-	// 	width: 50vw;
-
-	// 	path {
-	// 		fill: none;
-	// 		stroke: $light;
-	// 	}
-	// }
-
-	// min-height: 80vh;
-
 	&_content {
 		.o-about_left,
 		.o-about_right {
@@ -61,6 +45,40 @@
 
 		.o-text p:nth-of-type(1) {
 			margin-bottom: $space-md;
+		}
+	}
+
+	&_right {
+		.c-drawnLogo {
+			width: 40vw;
+			height: 40vw;
+			position: absolute;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			right: -20vw;
+			transform: rotate(240deg);
+
+
+			svg {
+				overflow: visible;
+			}
+
+			svg *:not(.vibration) {
+				display: none;
+			}
+
+			.vibration {
+				stroke: none;
+
+				&:nth-child(2) {
+					fill: $blue;
+				}
+
+				&:nth-child(3) {
+					fill: $red;
+				}
+			}
 		}
 	}
 
