--- a/src/components/Pages/Projects/c-grid.scss
+++ b/src/components/Pages/Projects/c-grid.scss
@@ -4,9 +4,11 @@
 }
 
 .c-grid {
-	display: grid;
-	grid-template-columns: repeat(12, 1fr);
-	grid-row-gap: 10vw;
+	@include media(">=tablet") {
+		display: grid;
+		grid-template-columns: repeat(12, 1fr);
+		grid-row-gap: 10vw;
+	}
 
 	@include media("<=tablet") {
 		grid-row-gap: 10vw !important;
@@ -19,73 +21,6 @@
 		width: 100%;
 		height: 100%;
 		transform-origin: center;
-		
-
-		// transition: all 1s cubic-bezier(1, 0, 0, 1);
-
-		// &_svg_yellow,
-		// &_svg_blue {
-		// 	transform: scaleY(0.01);
-		// 	transition: all 1s cubic-bezier(1, 0, 0, 1);
-		// 	opacity: 0;
-		// }
-
-		// &_svg_green,
-		// &_svg_red {
-		// 	transform: scaleX(0.01);
-		// 	transition: all 1s cubic-bezier(1, 0, 0, 1);
-		// 	opacity: 0;
-		// }
-
-		// &_svg_green {
-		// 	width: 100%;
-		// 	transform-origin: left;
-		// 	opacity: 0;
-
-		// 	path {
-		// 		fill: $green;
-		// 	}
-		// }
-
-		// &_svg_yellow {
-		// 	height: 100%;
-		// 	position: absolute;
-		// 	left: 0;
-		// 	top: 0;
-		// 	transform-origin: top;
-		// 	transition-delay: 200ms;
-
-		// 	path {
-		// 		fill: $yellow;
-		// 		position: relative;
-		// 	}
-		// }
-
-		// &_svg_blue {
-		// 	transform-origin: top;
-		// 	height: 100%;
-		// 	position: absolute;
-		// 	right: 0;
-		// 	top: 0;
-		// 	transition-delay: 350ms;
-
-		// 	path {
-		// 		fill: $blue;
-		// 	}
-		// }
-
-		// &_svg_red {
-		// 	width: 100%;
-		// 	position: absolute;
-		// 	right: 0;
-		// 	bottom: 0;
-		// 	transform-origin: left;
-		// 	transition-delay: 100ms;
-
-		// 	path {
-		// 		fill: $red;
-		// 	}
-		// }
 	}
 
 	@include media("<=tablet") {
@@ -98,27 +33,6 @@
 		align-items: stretch;
 		opacity: 0;
 		position: relative;
-
-
-
-		// &:hover .c-frame {
-		// 	transform: rotate(0) scale(1.1);
-		// 	opacity: 1;
-		// }
-
-		// &:hover .c-frame {
-		// 	&_svg_yellow,
-		// 	&_svg_blue {
-		// 		opacity: 1;
-		// 		transform: scaleY(1);
-		// 	}
-
-		// 	&_svg_green,
-		// 	&_svg_red {
-		// 		opacity: 1;
-		// 		transform: scaleX(1);
-		// 	}
-		// }
 
 		.c-link {
 			width: 100%;
@@ -209,8 +123,12 @@
 		}
 
 		@include media("<=tablet") {
-			grid-column: 1/13 !important;
-			height: 110vw !important;
+			width: 100%;
+			height: 120vw !important;
+
+			&:not(:last-child) {
+				margin-bottom: 4rem;
+			}
 
 			.c-frame {
 				display: none;
@@ -328,6 +246,10 @@
 		margin-bottom: 0.8rem;
 		position: relative;
 
+		@include media("<=tablet") {
+			font-size: 2rem !important;
+		}
+
 		// transform: translateY(-20%);
 		// opacity: 0;
 		// transition: transition;
@@ -337,7 +259,7 @@
 	&_description {
 		transition-delay: 100ms;
 		margin: 0;
-		font-family: "Canela";
+		
 		font-size: 1.8rem;
 		text-transform: none;
 		align-self: flex-end;
