--- a/src/components/Pages/SingleProject/o-single-project.scss
+++ b/src/components/Pages/SingleProject/o-single-project.scss
@@ -23,7 +23,7 @@
 			height: calc(100vh - $headerHeight);
 
 			@include media("<=phoneL") {
-				height: 200vw;
+				height: auto;
 			}
 
 			&_inner {
@@ -37,12 +37,17 @@
 					flex-direction: column;
 					align-items: flex-start;
 					justify-content: flex-start;
+					margin-top: 18vw;
 
 					.o-hero_text {
 						position: static;
+						margin: 0;
 						
-						margin: $space-xl 0;
 						width: 100%;
+
+						.o-h3, .o-h2 {
+							color: $dark;
+						}
 					}
 
 					.o-hero_image {
@@ -50,6 +55,11 @@
 						height: 110vw;
 						max-height: 100%;
 						margin-left: 0;
+						margin-top: 10vw;
+
+						.c-frame {
+							display: none;
+						}
 					}
 				}
 			}
@@ -94,6 +104,10 @@
 		.o-container {
 			display: flex;
 			align-items: flex-start;
+
+			.o-h3 {
+				margin-bottom: $space-lg;
+			}
 
 			> * {
 				flex: 50%;
