--- a/src/components/Slider/o-slider.scss
+++ b/src/components/Slider/o-slider.scss
@@ -22,8 +22,10 @@ $itemWidth: 30vw;
 	}
 
 	&_item {
+		position: relative;
 		width: 30vw;
 		height: 40vw;
+		overflow: hidden;
 
 		@include media("<=tablet") {
 			width: 40vw;
@@ -31,16 +33,33 @@ $itemWidth: 30vw;
 			
 		}
 
-		&:hover .o-slider_item_title {
+		.o-slider_item_title {
+			position: absolute; 
+			top: 0;
+			left: 0;
+			color: $light;
+			
+		}
+
+		.o-slider_item_subtitle {
+			position: absolute; 
+			bottom: 0;
+			right:  0;
+			color: $light !important;
+			
+		}
+
+		&:hover .o-slider_item_title, &:hover .o-slider_item_subtitle {
 			opacity: 1;
 			transform: none;
 			transition: 400ms ease;
 		}
 
 		&_info {
-			margin: $space-xs 0;
+			
 
-			.o-slider_item_title {
+
+			.o-slider_item_title, .o-slider_item_subtitle {
 				transform: translateY(100%);
 				opacity: 0;
 				transition: 400ms ease;
@@ -51,7 +70,7 @@ $itemWidth: 30vw;
 				}
 
 				.label::after {
-					background-color: $dark;
+					background-color: $light;
 					transition-delay: 100ms;
 
 					@include media("<=tablet") {
@@ -61,9 +80,19 @@ $itemWidth: 30vw;
 			}
 		}
 
+		&_info {
+			position: absolute;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			left: 0;
+			padding: $space-sm;
+		}
+
 		&_info * {
-			color: $dark;
+			color: $light;
 			margin: 0;
+			z-index: 2;
 		}
 	}
 
