--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -25,6 +25,25 @@
 	padding-bottom: $space-xxxl;
 }
 
+.-overlay-dark {
+
+	&::after {
+		transition: 400ms ease;
+		position: absolute;
+		top: 0;
+		left: 0;
+		content: "";
+		background-color: #181818;
+		width: 100%;
+		height: 100%;
+		opacity: 0;
+	}
+	&:hover::after{
+		opacity: 0.4;
+	}
+
+}
+
 .-padding-bottom-lg {
 	padding-bottom: $space-lg;
 }
@@ -326,11 +345,21 @@
 	transform-origin: center;
 }
 
+.c-line {
+	overflow: hidden;
+}
+
 .-fadeUpLines {
 	.c-line {
 		transform: translateY(100%);
 		opacity: 0;
 	}
+}
+
+.-bold {
+	&, & * {
+		font-family: 'Kobe Bold'
+	};
 }
 
 .-fadeUpChars {
@@ -366,7 +395,6 @@
 .-block {
 	display: block;
 }
-
 
 .-split {
 	opacity: 0;
