--- a/src/styles/scss/objects/o-h3.scss
+++ b/src/styles/scss/objects/o-h3.scss
@@ -1,11 +1,12 @@
-h3, .o-h3 {
-  font-size: 2.3vw;
-  
-  
-  font-family: 'Canela';
+h3,
+.o-h3 {
+	font-size: 2.3vw;
 
-  @include media("<=phoneL") {
-    font-size: 5vw!important;
-    line-height: 5vw !important;
-  }
+	font-family: "Kobe Bold";
+
+	@include media("<=tablet") {
+    
+		line-height: 3.5rem;
+		font-size: 3.5rem;
+	}
 }
