--- a/src/components/Pages/Home/o-home_hero.scss
+++ b/src/components/Pages/Home/o-home_hero.scss
@@ -4,7 +4,7 @@
 			padding-top: 5vw;
 			padding-bottom: 5vw;
 			max-height: calc(100vh - $headerHeight - 5rem);
-			height: 80vw;
+			height: 90vw;
 		}
 
 		&_inner {
@@ -47,6 +47,16 @@
 				opacity: 0;
 				transition: all 2s cubic-bezier(0.19, 1, 0.22, 1);
 				transition-delay: 0.3s;
+
+				overflow: visible;
+
+				svg {
+					overflow: visible;
+
+					.ear, .nose {
+						fill: none;
+					}
+				}
 			}
 		}
 
