--- a/src/components/Slider/o-slider.scss
+++ b/src/components/Slider/o-slider.scss
@@ -55,8 +55,9 @@ $itemWidth: 30vw;
 			transition: 400ms ease;
 		}
 
-		&_info {
-			
+		&_info  {
+
+			font-size: 0.8rem !important;
 
 
 			.o-slider_item_title, .o-slider_item_subtitle {
