--- a/src/components/Vector/svg.scss
+++ b/src/components/Vector/svg.scss
@@ -1,3 +1,15 @@
+
+.c-megaphone {
+	svg {
+		path:first-child, path:nth-child(2) {
+			fill: $yellow;
+		}
+
+	
+	}
+}
+
+
 .c-quotation {
 	width: 80vw;
 	opacity: 0.8;
