--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -21,6 +21,10 @@
 	padding-top: $space-xxxl;
 }
 
+.-padding-top-lg {
+	padding-top: $space-xl;
+}
+
 .-padding-bottom-huge {
 	padding-bottom: $space-xxxl;
 }
