--- a/src/styles/scss/_vars.module.scss
+++ b/src/styles/scss/_vars.module.scss
@@ -81,6 +81,13 @@ $footerHeight: 80vw;
 //Breakpoints
 $tablet: 820px;
 
+
+$mobileItemHeight: 120vw;
+
+//Type mobile
+
+
+
 :export {
 	loaderDuration: $loader-duration;
 	loaderDelay: $loader-delay;
