--- a/src/components/Vector/svg.scss
+++ b/src/components/Vector/svg.scss
@@ -1,14 +1,11 @@
-
 .c-megaphone {
 	svg {
-		path:first-child, path:nth-child(2) {
+		path:first-child,
+		path:nth-child(2) {
 			fill: $yellow;
 		}
-
-	
 	}
 }
-
 
 .c-quotation {
 	width: 80vw;
@@ -43,5 +40,27 @@
 		.faceLine {
 			fill: $dark;
 		}
+	}
+}
+
+.c-lineDrawing {
+	position: absolute;
+	bottom: 2vw;
+	transform: scaleX(0.0) ;
+	transform-origin: left;
+	width: 90%;
+	left: 5%;
+	
+
+	&.draw {
+		animation: draw 1s cubic-bezier(1, 0, 0, 1) forwards;
+		
+	}
+}
+
+@keyframes draw {
+	to {
+		transform-origin: left;
+		transform: scaleX(1) ;
 	}
 }
