--- a/src/components/Pages/Home/o-home_about.scss
+++ b/src/components/Pages/Home/o-home_about.scss
@@ -107,6 +107,10 @@
 	}
 
 	&_right {
+		
+			transform: translateX(50%) rotate(60deg);
+			opacity: 0;
+		
 		.c-drawnLogo {
 			width: 40vw;
 			height: 40vw;
@@ -141,6 +145,9 @@
 	}
 
 	&_content {
+
+		
+
 		@include media("<=tablet") {
 			flex-direction: column;
 			justify-content: center;
@@ -154,6 +161,8 @@
 			.o-about_right {
 				padding: 0;
 			}
+
+			
 
 			.o-about_left {
 				width: 100%;
