--- a/src/components/Link/c-link.scss
+++ b/src/components/Link/c-link.scss
@@ -2,7 +2,8 @@ button.c-link {
   border: none;
   background: transparent;
   font-size: 1.4rem !important;
-  padding: 0;
+  padding-left: 0;
+  padding-right: 0;
 
   &:focus {
     outline: none;
