--- a/src/styles/scss/_utils.scss
+++ b/src/styles/scss/_utils.scss
@@ -25,6 +25,10 @@
 	padding-top: $space-xl;
 }
 
+.-row-reverse {
+	flex-direction: row-reverse;
+}
+
 .-padding-bottom-huge {
 	padding-bottom: $space-xxxl;
 }
