--- a/src/components/Menu/c-menu.scss
+++ b/src/components/Menu/c-menu.scss
@@ -5,7 +5,7 @@
 	min-height: -webkit-fill-available;
 	width: 100vw;
 	display: block;
-	z-index: 999;
+	z-index: 999999;
 	transform: translateY(-100%);
 	transform-origin: top;
 	transition: 600ms ease;
@@ -97,12 +97,15 @@
 
 			.c-link {
 				color: $light;
-				
+				font-size: 9rem !important;
+				line-height: 9rem !important;
+				text-transform: uppercase;
 			
 
 				@include media("<=tablet") {
-					font-size: 18vw;
-					line-height: 18vw;
+					font-size: 18vw !important;
+					line-height: 18vw !important;
+					text-transform: uppercase;
 				}
 			}
 		}
