--- a/src/components/Slider/o-slider.scss
+++ b/src/components/Slider/o-slider.scss
@@ -32,6 +32,7 @@ $itemWidth: 30vw;
 		height: 100%;
 		overflow: hidden;
 		
+		
 		&:not(:first-child) {
 			margin-left: 2rem
 		}
@@ -43,6 +44,7 @@ $itemWidth: 30vw;
 
 		img {
 			transition: $transition-zoom;
+			filter: grayscale(1);
 		}
 
 		&:hover img {
