--- a/src/components/Stories/c-stories.scss
+++ b/src/components/Stories/c-stories.scss
@@ -17,7 +17,11 @@
 
 	&_frame {
 		
-		transform: scale(1.3)rotate(-1deg);
+		@include media("<=phoneL") {
+			display: none;
+		}
+
+		transform: scale(1.3) rotate(-1deg);
 		position: absolute;
 
 		.c-frame_svg_quote {
